--- a/jaleApp/src/main/resources/templates/reports/listVehicleReport.html
+++ b/jaleApp/src/main/resources/templates/reports/listVehicleReport.html
@@ -209,7 +209,7 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Conductores mas demandados</h1>
+					<h1 class="h3 mb-4 text-gray-800">Reporte de vehículos más nuevos</h1>
 					<a th:href="@{/reservas/new/}" class="btn btn-danger btn-xs">Nuevo</a>
 
 
